--- a/index.html
+++ b/index.html
@@ -4642,10 +4642,7 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68a4b6b633b9c80467497ccc"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-  <script
-    src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/js/staging-fringe.7733b850.9ac5c4113f55d19e.js"
-    type="text/javascript" integrity="sha384-lVgdAHlfC4CAdjZpPjNobq5X1QZO7SNS4lXvVIxd4E2s1v/OcELms1sjfJ4kZ/Z1"
-    crossorigin="anonymous"></script>
+  <script src="/script/main.js" type="text/javascript"></script>
 
 
   <!--Nav themes-->
