--- a/index.html
+++ b/index.html
@@ -4639,9 +4639,10 @@
       </div>
     </footer>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68a4b6b633b9c80467497ccc"
+  <!-- <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68a4b6b633b9c80467497ccc"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
+  <script src="/script/jquery-3.5.1.min.js" type="text/javascript"></script>
   <script src="/script/main.js" type="text/javascript"></script>
 
 
