few changes of about page

--- a/product-tabs-bckup.html
+++ b/product-tabs-bckup.html
@@ -1454,3 +1454,153 @@
         </div>
       </section>
       
+
+
+
+
+
+            <section class="section_small">
+        <div class="large-wrapper">
+          <div data-w-id="9ef0cbf2-b2ca-d36e-d617-44a40ef04656" class="faqs_wrapper">
+            <div class="faqs">
+              <div class="faqs_content">
+                <div class="faqs_lottie" data-w-id="9ef0cbf2-b2ca-d36e-d617-44a40ef0465a" data-animation-type="lottie"
+                  data-src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68beee0e682cb6ba9fdf35fb_84d91c3974cceb9dcd2120d37c7a6fa8_FAQ-Section-Animated-Lines.json"
+                  data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
+                  data-default-duration="0" data-duration="0"></div>
+                <div class="text-block">
+                  <h2 class="heading-style-h4">We’re here to answer all your questions.</h2>
+                </div><a role="button" id="w-node-_4288af17-1c82-e766-edec-c062ed643801-ed643801"
+                  data-wf--button-primary--variant="base" href="/explore-the-platform" class="button w-inline-block">
+                  <div class="button_bg"></div>
+                  <div class="button_content">
+                    <div>Request Demo</div>
+                  </div>
+                </a>
+              </div>
+              <div class="faqs_list">
+                <div class="accordion">
+                  <div tabindex="0" role="button" class="accordion_toggle">
+                    <div class="text-size-medium text-weight-medium">What if I don’t have the budget for multiple
+                      programs?</div>
+                    <div class="accordion_icon">
+                      <div class="plus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="7.40918" y="16.5" width="16" height="1.7211" rx="0.860549"
+                            transform="rotate(-90 7.40918 16.5)" fill="#4a45ff" />
+                        </svg></div>
+                      <div class="minus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="0.269531" y="7.63965" width="16" height="1.7211" rx="0.860549" fill="#4a45ff" />
+                        </svg></div>
+                    </div>
+                  </div>
+                  <div class="accordion_menu">
+                    <div class="accordion_menu_wrapper">
+                      <div class="accordion_menu-text w-richtext">
+                        <p>With the Tech Excellence Membership, there is intrinsic value for employees <a
+                            href="pricing.html">even
+                            with limited (or no) funding</a>, as they can enjoy membership benefits, points back on
+                          purchases, automated subscriptions, as well as periodic drawings, raffles, and prizes.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion_toggle_bg"></div>
+                  <div class="accordion_bg"></div>
+                </div>
+                <div class="accordion">
+                  <div tabindex="0" role="button" class="accordion_toggle">
+                    <div class="text-size-medium text-weight-medium">With so many possible programs, where do I get
+                      started?</div>
+                    <div class="accordion_icon">
+                      <div class="plus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="7.40918" y="16.5" width="16" height="1.7211" rx="0.860549"
+                            transform="rotate(-90 7.40918 16.5)" fill="#4a45ff" />
+                        </svg></div>
+                      <div class="minus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="0.269531" y="7.63965" width="16" height="1.7211" rx="0.860549" fill="#4a45ff" />
+                        </svg></div>
+                    </div>
+                  </div>
+                  <div class="accordion_menu">
+                    <div class="accordion_menu_wrapper">
+                      <div class="accordion_menu-text w-richtext">
+                        <p>Start small. Most customers roll out one or two programs first—like recognition or automated
+                          birthday and milestone rewards—and scale from there. Tech Excellence makes it easy to grow at
+                          your own
+                          pace, and we’ll guide you every step of the way</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion_toggle_bg"></div>
+                  <div class="accordion_bg"></div>
+                </div>
+                <div class="accordion">
+                  <div tabindex="0" role="button" class="accordion_toggle">
+                    <div class="text-size-medium text-weight-medium">So, how much does Tech Excellence cost?</div>
+                    <div class="accordion_icon">
+                      <div class="plus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="7.40918" y="16.5" width="16" height="1.7211" rx="0.860549"
+                            transform="rotate(-90 7.40918 16.5)" fill="#4a45ff" />
+                        </svg></div>
+                      <div class="minus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="0.269531" y="7.63965" width="16" height="1.7211" rx="0.860549" fill="#4a45ff" />
+                        </svg></div>
+                    </div>
+                  </div>
+                  <div class="accordion_menu">
+                    <div class="accordion_menu_wrapper">
+                      <div class="accordion_menu-text w-richtext">
+                        <p>Our <a href="pricing.html">pricing</a> is simple: a platform fee + your chosen budget. No
+                          hidden
+                          charges or per-use fees.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion_toggle_bg"></div>
+                  <div class="accordion_bg"></div>
+                </div>
+                <div class="accordion">
+                  <div tabindex="0" role="button" class="accordion_toggle">
+                    <div class="text-size-medium text-weight-medium">Looks great, but will my people actually like it?
+                    </div>
+                    <div class="accordion_icon">
+                      <div class="plus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="7.40918" y="16.5" width="16" height="1.7211" rx="0.860549"
+                            transform="rotate(-90 7.40918 16.5)" fill="#4a45ff" />
+                        </svg></div>
+                      <div class="minus-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                          viewBox="0 0 17 17" fill="none" role="none">
+                          <rect x="0.271484" y="7.63818" width="16" height="1.72353" rx="0.861766" fill="#4a45ff" />
+                          <rect x="0.269531" y="7.63965" width="16" height="1.7211" rx="0.860549" fill="#4a45ff" />
+                        </svg></div>
+                    </div>
+                  </div>
+                  <div class="accordion_menu">
+                    <div class="accordion_menu_wrapper">
+                      <div class="accordion_menu-text w-richtext">
+                        <p>What makes Tech Excellence’s employee benefits unique?</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion_toggle_bg"></div>
+                  <div class="accordion_bg"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
