about us new page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 
 
-<link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="main.css" rel="stylesheet" type="text/css" />
   <link href="about.css" rel="stylesheet" type="text/css" />
 
@@ -556,7 +556,7 @@
         }
       </style>
     </div>
-     <header
+    <header
       style="-webkit-transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
       class="nav-wrapper">
       <div data-animation="default" class="nav w-nav u-theme-dark" data-easing2="ease" data-lenis-prevent=""
@@ -953,10 +953,9 @@
                     <div class="chip_right-line"></div>
                   </div>
                   <div class="about_title-wrap max-width-medium">
-                    <h1 class="heading-style-h2">The Future Belongs to Those who Embrace <span
-                        class="green-font">Embrace</span> the Power of AI</h1>
-                    <p class="text-size-large text-color-dark">Fringe puts humans back at the center of work, bringing
-                      trust and belonging to the forefront of the employee experience.</p>
+                    <h1 class="heading-style-h2">The Future Belongs to those who embrace the power of <span
+                        class="green-font">AI</span></h1>
+                    <p class="text-size-large text-color-dark">We build tools and new ways that help people express themselves in different forms — giving them a chance to discover hidden talents and share their emotions with enterprise-grade technology.</p>
                   </div>
                 </div>
                 <div class="about-marquee-wrapper">
@@ -987,82 +986,7 @@
                         srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e92b72d4f450e9dfc_img5-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e92b72d4f450e9dfc_img5.avif 800w"
                         alt="Group standing outside near a “Tiny House” sign on a sunny day" class="about-hero-image" />
                     </div>
-                    <div class="about-marquee"><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e20dff9b7217cd26b_img.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e20dff9b7217cd26b_img-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e20dff9b7217cd26b_img.avif 800w"
-                        alt="Man smiling and gesturing near a red car in a sunny parking area"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500ed4110a25d198fc0b_img2.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500ed4110a25d198fc0b_img2-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500ed4110a25d198fc0b_img2.avif 800w"
-                        alt="Two people wearing hats sitting outdoors and talking on a sunny day"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e502ec04977bca864_img3.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e502ec04977bca864_img3-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e502ec04977bca864_img3.avif 800w"
-                        alt="Woman holding a colorful “Happy Birthday” sign while sitting at a restaurant table"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0d03dc12cdc1a3e6_img4.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0d03dc12cdc1a3e6_img4-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0d03dc12cdc1a3e6_img4.avif 800w"
-                        alt="People sitting around a campfire at night playing guitar and talking"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e92b72d4f450e9dfc_img5.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e92b72d4f450e9dfc_img5-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e92b72d4f450e9dfc_img5.avif 800w"
-                        alt="Group standing outside near a “Tiny House” sign on a sunny day" class="about-hero-image" />
-                    </div>
-                  </div>
-                  <div class="about_hero-marquee-wrap-reverse">
-                    <div class="about-marquee-reverse"><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0513ba12c5f313af_img6.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0513ba12c5f313af_img6-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0513ba12c5f313af_img6.avif 800w"
-                        alt="Large group gathered around a restaurant table enjoying a meal"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e52f61460557324e3_img7.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e52f61460557324e3_img7-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e52f61460557324e3_img7.avif 800w"
-                        alt="Group of friends laughing and dancing outdoors at night" class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e42e1a2f38a62c124_img8.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e42e1a2f38a62c124_img8-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e42e1a2f38a62c124_img8.avif 800w"
-                        alt="Group riding horses on a grassy trail surrounded by trees" class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e1b7d8b1959408864_img9.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e1b7d8b1959408864_img9-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e1b7d8b1959408864_img9.avif 800w"
-                        alt="Group of people posing together indoors against a wooden wall"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e29ca31a7ddc52c7a_img10.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e29ca31a7ddc52c7a_img10-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e29ca31a7ddc52c7a_img10.avif 800w"
-                        alt="Group of friends posing outdoors near a pond on a sunny day." class="about-hero-image" />
-                    </div>
-                    <div class="about-marquee-reverse"><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0513ba12c5f313af_img6.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0513ba12c5f313af_img6-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e0513ba12c5f313af_img6.avif 800w"
-                        alt="Large group gathered around a restaurant table enjoying a meal"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e52f61460557324e3_img7.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e52f61460557324e3_img7-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e52f61460557324e3_img7.avif 800w"
-                        alt="Group of friends laughing and dancing outdoors at night" class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e42e1a2f38a62c124_img8.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e42e1a2f38a62c124_img8-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e42e1a2f38a62c124_img8.avif 800w"
-                        alt="Group riding horses on a grassy trail surrounded by trees" class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e1b7d8b1959408864_img9.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e1b7d8b1959408864_img9-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e1b7d8b1959408864_img9.avif 800w"
-                        alt="Group of people posing together indoors against a wooden wall"
-                        class="about-hero-image" /><img
-                        src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e29ca31a7ddc52c7a_img10.avif"
-                        loading="lazy" sizes="(max-width: 479px) 100vw, 240px"
-                        srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e29ca31a7ddc52c7a_img10-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e9500e29ca31a7ddc52c7a_img10.avif 800w"
-                        alt="Group of friends posing outdoors near a pond on a sunny day." class="about-hero-image" />
-                    </div>
+                    
                   </div>
                 </div>
               </div>
@@ -1073,7 +997,7 @@
       <section data-theme="light" class="section background-gradient-pink-light">
         <div class="container-large about-work">
           <div class="cols">
-            <div data-w-id="63c08c8b-3c2b-da27-d448-e151159e8eb3"  class="about_work-wrap">
+            <div data-w-id="63c08c8b-3c2b-da27-d448-e151159e8eb3" class="about_work-wrap">
               <div data-wf--border-gradient-tag--variant="secondary---bold"
                 class="border-gradient w-variant-5c960ebc-ce5c-78f6-8494-45af949aac3b">
                 <div>Purposeful Work</div>
@@ -1094,7 +1018,7 @@
                 </div>
               </div>
             </div>
-            <div data-w-id="98ab98b0-a58f-a4a4-920a-94381d26157a"  class="about_work-img-wrap"><img
+            <div data-w-id="98ab98b0-a58f-a4a4-920a-94381d26157a" class="about_work-img-wrap"><img
                 src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ed3d8246c6c49acf04461a_about.avif"
                 loading="lazy" sizes="(max-width: 479px) 100vw, 239.9921875px"
                 srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ed3d8246c6c49acf04461a_about-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ed3d8246c6c49acf04461a_about-p-800.avif 800w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ed3d8246c6c49acf04461a_about.avif 1296w"
@@ -1118,7 +1042,7 @@
                 <div class="about-gradient"></div>
               </a></div>
           </div>
-          <div data-w-id="876bca2c-bb1d-7a8a-3198-8c00df7bd6f0"  class="about_work-cards-wrap">
+          <div data-w-id="876bca2c-bb1d-7a8a-3198-8c00df7bd6f0" class="about_work-cards-wrap">
             <div id="w-node-_0d97fda8-ef94-b880-ca1c-0cd575893e65-fc3b9f68" class="about_work-card">
               <div class="about_work-card-number">
                 <div>1</div>
@@ -1187,7 +1111,7 @@
               </div>
             </div>
             <div class="engagement-wrapper">
-              <div data-w-id="2a692f37-08c9-2983-2110-2d2a3879a3d1"  class="stats-grid">
+              <div data-w-id="2a692f37-08c9-2983-2110-2d2a3879a3d1" class="stats-grid">
                 <div class="stat-card">
                   <div class="stat-card_top">
                     <div class="stat-number">
@@ -1229,7 +1153,7 @@
                   <div class="hide-mobile-landscape">Fringe benefits are enjoyed by teams around the world.</div>
                 </div>
               </div>
-              <div data-w-id="301611a3-70a2-5276-52f4-ffd55e5db0b7"  class="w-dyn-list">
+              <div data-w-id="301611a3-70a2-5276-52f4-ffd55e5db0b7" class="w-dyn-list">
                 <div role="list" class="team-wrapper w-dyn-items">
                   <div role="listitem" class="w-dyn-item">
                     <div class="team-card">
@@ -1358,7 +1282,7 @@
                 </div>
               </div>
             </div>
-            <div data-w-id="2b5ce946-79b1-84c1-f9cc-7fbc91847f7d"  class="belivers-wrapper">
+            <div data-w-id="2b5ce946-79b1-84c1-f9cc-7fbc91847f7d" class="belivers-wrapper">
               <div class="eyebrow-logo text-weight-bold">Backed by believers</div>
               <div class="belivers_logo-wrap"><img
                   src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ed58d036fd07dbb4b9b718_origin.avif"
@@ -1394,8 +1318,8 @@
                 business</h2>
             </div>
           </div>
-          <div data-w-id="22e14915-f34b-2852-fa0a-a321e9f01159"  data-current="Tab 1"
-            data-easing="ease" data-duration-in="300" data-duration-out="100" class="press-tabs w-tabs">
+          <div data-w-id="22e14915-f34b-2852-fa0a-a321e9f01159" data-current="Tab 1" data-easing="ease"
+            data-duration-in="300" data-duration-out="100" class="press-tabs w-tabs">
             <div class="press_tabs-menu background-gradient-purple-dark w-tab-menu"><a data-w-tab="Tab 1"
                 class="press_tab-link w-inline-block w-tab-link w--current"><img loading="lazy"
                   src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ed6641afb9bd7c4cdacd35_techcrunch.svg"
