--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                   <a href="index.html" class="nav_link w-inline-block">
                     <div>Home</div>
                   </a>
-                  <a href="about.html" class="nav_link w-inline-block">
+                  <a href="about-us.html" class="nav_link w-inline-block">
                     <div>About</div>
                   </a>
                   <div data-hover="true" data-delay="400" class="nav_dropdown w-dropdown">
@@ -1771,7 +1771,7 @@
               </div>
               <div class="footer_col">
                 <div class="eyebrow text-weight-bold text-color-primary">Company</div>
-                <div class="footer_links"><a href="about.html" class="footer_link">About</a><a
+                <div class="footer_links"><a href="about-us.html" class="footer_link">About</a><a
                     aria-label="Careers (opens in a new tab)" href="https://Tech Excellence.breezy.hr/" target="_blank"
                     class="footer_link">Careers</a><a href="pricing.html" class="footer_link">Pricing</a><a
                     href="/explore-the-platform" class="footer_link">Demo Request</a></div>
@@ -1808,6 +1808,55 @@
   <script src="/script/jquery-3.5.1.min.js" type="text/javascript"></script>
   <!-- <script src="/script/main.js" type="text/javascript"></script> -->
 
+  <!--Dropdown hover logic (replaces Webflow runtime dropdown behavior)-->
+  <script>
+    $(document).ready(function () {
+      var closeTimer;
+
+      $('.w-dropdown[data-hover="true"]').each(function () {
+        var $dropdown = $(this);
+        var $toggle = $dropdown.find('.w-dropdown-toggle');
+        var $list = $dropdown.find('.w-dropdown-list');
+        var delay = parseInt($dropdown.attr('data-delay')) || 0;
+        var openTimer;
+
+        $dropdown.on('mouseenter', function () {
+          clearTimeout(closeTimer);
+          clearTimeout(openTimer);
+          // Close any other open dropdowns immediately
+          $('.w-dropdown-list.w--open').not($list).removeClass('w--open');
+          openTimer = setTimeout(function () {
+            $list.addClass('w--open');
+          }, delay);
+        });
+
+        $dropdown.on('mouseleave', function () {
+          clearTimeout(openTimer);
+          closeTimer = setTimeout(function () {
+            $list.removeClass('w--open');
+          }, 200);
+        });
+
+        // Also support click/tap for mobile
+        $toggle.on('click', function (e) {
+          e.preventDefault();
+          if ($list.hasClass('w--open')) {
+            $list.removeClass('w--open');
+          } else {
+            $('.w-dropdown-list.w--open').not($list).removeClass('w--open');
+            $list.addClass('w--open');
+          }
+        });
+      });
+
+      // Close dropdowns when clicking outside
+      $(document).on('click', function (e) {
+        if (!$(e.target).closest('.w-dropdown').length) {
+          $('.w-dropdown-list.w--open').removeClass('w--open');
+        }
+      });
+    });
+  </script>
 
   <!--Nav themes-->
   <script>
@@ -1982,6 +2031,7 @@
 
       dropdownToggles.forEach(function (toggle) {
         toggle.addEventListener('mouseenter', function () {
+          window.dataLayer = window.dataLayer || [];
           window.dataLayer.push({
             'event': 'nav_dropdown_hover',
             'elementText': toggle.textContent.trim(),
