css add to prduct-detail

--- a/product-detail.html
+++ b/product-detail.html
@@ -22,7 +22,8 @@
     rel="apple-touch-icon" />
   <link href="https://www.fringe.us/platform-overview" rel="canonical" />
   <link rel="preconnect" href="https://cdn.prod.website-files.com" crossorigin="">
-
+ <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="main.css" rel="stylesheet" type="text/css" />
 
 
   <meta name="theme-color" content="#260B40">
