--- a/product-detail.html
+++ b/product-detail.html
@@ -965,7 +965,7 @@
                     <div class="hero-trust-item"><span class="hero-trust-dot"></span>99% Accuracy</div>
                   </div>
                 </div>
-                <div class="platform-hero_image-wrapper is-overview"><img src="assets/convosense-main.png" loading="eager"
+                <div class="platform-hero_image-wrapper is-overview"><img src="assets/product_hero.png" loading="eager"
                     width="656" height="420.5" alt="A cell phone with the message mission accomplished on it."
                     class="overview_image" /></div>
               </div>
@@ -1133,7 +1133,7 @@
               </div>
             </div>
             <div class="cs-demo-card">
-              <img src="/assets/Complete-img.jpg" alt="ConvoSense complete conversation intelligence dashboard" loading="lazy" />
+              <img src="/assets/Complete-img.png" alt="ConvoSense complete conversation intelligence dashboard" loading="lazy" />
             </div>
           </div>
         </div>
